# c-microgames

./: .dir-locals.el  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: package_ver.h.in
mg-guess/: CMakeLists.txt
mg-guess/src/: config.h.in  main.c
src/consio/: .gitignore  CMakeLists.txt
src/consio/include/: consio.h  consio.h.in  consio_config.h.in  consio_input.h  consio_output.h
src/consio/src/: consio_input.c  consio_output.c
src/containers/: .gitignore  CMakeLists.txt
src/containers/include/: containers.h  containers_clist.h  containers_config.h.in  containers_darray.h  containers_primptr.h  containers_variant.h
src/containers/src/: containers_clist.c  containers_darray.c  containers_primptr.c  containers_variant.c
src/guess-my-number/: CMakeLists.txt
src/guess-my-number/src/: config.h.in  main.c
tests/: CMakeLists.txt
tests/include/: minunit.h
tests/src/: main.c  minunit.h  test_clist.c  test_clist.h
tests/test_clist/: CMakeLists.txt
tests/test_clist/src/: test_clist.c
tests/test_darray/: CMakeLists.txt
tests/test_darray/src/: test_darray.c
tests/test_variant/: CMakeLists.txt
tests/test_variant/src/: test_variant.c
